@@ -85,6 +85,9 @@ class SphinxTransformer(Transformer):
     def apply_transforms(self):
         # type: () -> None
         if isinstance(self.document, nodes.document):
+            if hasattr(self.document.settings, 'env') and self.env:
+                self.document.settings.env = self.env
+
             Transformer.apply_transforms(self)
         else:
             # wrap the target node by document node during transforming
